# dynamic-dpo-v3

./: .gitignore  AGENTS.md  README.md  config_beta_dpo.yaml  config_dpo_batch.yaml  config_e_dpo.yaml  config_e_dpo_harmless.yaml  config_e_dpo_harmless_qwen.yaml  config_e_dpo_helpful.yaml  config_e_dpo_helpful_qwen.yaml  config_e_dpo_ultrafeedback.yaml  config_e_dpo_ultrafeedback_llama.yaml  config_e_dpo_ultrafeedback_qwen.yaml  config_margin_dpo.yaml  config_sft.yaml  config_sft_batch.yaml  config_sft_batch_resume.yaml  config_sft_batch_ultrachat_only.yaml  config_sft_hh_harmless_base.yaml  config_sft_hh_helpful_base.yaml  config_sft_ultrachat.yaml  extract_sft_pipeline_prompt.md  llama-3-8b-base-simpo.yaml  pyproject.toml
archive/: e_dpo_trainer.py
eval/: README.md  __init__.py  benchmark_common.py  model_generation.py
eval/alpacaeval/: __init__.py  alpacaeval_common.py  alpacaeval_eval.py  alpacaeval_infer.py  analyze_results.py  batch_runner.py  config_alpacaeval.yaml  config_alpacaeval_batch.yaml  config_alpacaeval_batch_llama3_only.yaml  config_alpacaeval_sft_og.yaml  evaluate_model.py  generate_hh_output.py  generate_outputs.py  pipeline_lib.py  run_pipeline.py
eval/arenahard/: __init__.py  api_config.yaml  arenahard_eval.py  arenahard_infer.py  batch_runner.py  config_arenahard.yaml  config_arenahard_batch.yaml  judge_config.yaml
eval/data_generation/: __init__.py  hh_parser.py  rollout.py  run_rollout.py  upload_judged_rollout.py  utils.py
eval/gpt_judge_HH/: config_eval_HH.yaml  config_evaluation.yaml  data_utils.py  generate_hh_output.py  judge_outputs_gpt4o.py
eval/gpt_judge_TLDR/: README.md  analyze_results.py  config_evaluation.yaml  data_process_tldr.py  generate_summaries.py  gpt4_oracle.py  qualitative_analysis.py  visualize_results.py
eval/mtbench/: __init__.py  batch_runner.py  config_mtbench.yaml  config_mtbench_batch.yaml  mtbench_eval.py  mtbench_infer.py
scripts/: run_alpacaeval_native_all.sh  run_beta_dpo.py  run_e_dpo.py  run_e_dpo_dual.sh  run_e_dpo_hh_bases.sh  run_e_dpo_ultrafeedback_dual.sh  run_margin_dpo.py  run_sft_matrix.py  train_sft_single.py
src/: batch_dpo_runner.py  batch_runner_utils.py  batch_sft_runner.py  cli.py
src/config/: loader.py
src/data/: hh_dataset.py  sft_dataset.py  templates.py  ultrachat_dataset.py  ultrafeedback_dataset.py
src/trainers/: beta_dpo_trainer.py  e_dpo_trainer.py  epsilon_dpo_trainer.py  (+2 more)
test/: test_alpacaeval_batch_runner.py  test_alpacaeval_pipeline.py  test_arenahard_batch_runner.py  test_arenahard_pipeline.py  test_batch_runner_utils.py  test_beta_dpo_trainer.py  test_chat_templates.py  test_dpo_batch_runner.py  test_dpo_cli.py  test_e_dpo_trainer.py  test_margin_dpo_trainer.py  test_mtbench_batch_runner.py  test_mtbench_pipeline.py  test_sft_batch_runner.py  test_sft_pipeline_smoke.py
(+98 files in other folders)
