[project]
name = "dynamic-dpo-v1"
version = "0.1.0"
description = "Dynamic Beta DPO Training Framework"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.12.0",
    "alpaca-eval>=0.6.0",
    "datasets>=4.4.2",
    "hf-transfer>=0.1.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "openai>=2.0.0",
    "pandas>=2.2.0",
    "peft>=0.18.0",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "setuptools>=80.9.0",
    "tabulate>=0.9.0",
    "tokenizers>=0.22.2",
    "torch>=2.0.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "trl>=0.26.2",
    "wandb>=0.23.1",
]

[project.scripts]
train-dpo = "src.cli:main_dpo"
train-sft = "src.cli:main_sft"
train-beta-dpo = "src.cli:main_beta_dpo"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
